# chess

./: A_roadorder.sh  CMakeLists.txt  chess.sh
include/: capture.h  game.h  move.h  picture.h  rectget.h
src/: capture.cpp  game.cpp  main.cpp  move.cpp  picture.cpp  rectget.cpp
